# autoskill

./: .env.example  .gitignore  AUTOMATION.md  CLAUDE.md  README.md  SETUP.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
automation/: __init__.py  adspower.py  artifacts.py  browser.py  config.py  human.py  paths.py  state.py
docs/: repo_architecture_audit.md
inputs/: target_companies.yaml  theblueprint_career_hiring.yaml
output/: README.md
prompts_for_reference/: promt_for_reference.md
runtime/: README.md
scripts/: README.md  approve_supervisor_item.py  audit_instagram_dm_targets.py  audit_mailru_inbox.py  build_mail_contact_registry.py  build_theblueprint_master_report.py  build_theblueprint_people_targets.py  check_setup.py  claim_codex_review_batch.py  evaluate_brain_variants.py  evaluate_writer_variants.py  filter_shortlisted_bloggers.py  finalize_codex_review.py  list_codex_review_queue.py  rebuild_instagram_brand_exports.py  rebuild_theblueprint_career_hiring.py  refresh_brand_intelligence_cases.py  refresh_instagram_common_followers_live.py  repair_arbiter_text_artifacts.py  resolve_theblueprint_people_routes.py  run_agent_canvas.py  run_company_enrichment.py  run_genaipro_reference_batch.py  run_genaipro_restore.py  run_higgsfield_login_fill.py  run_instagram_brand_search.py  run_instagram_following_only.py  run_subagents_probe.py  run_supervisor.py  run_theblueprint_career_parser.py  send_instagram_dm_batch.py  send_instagram_dm_test.py  send_mailru_batch.py  send_mailru_test.py  sync_instagram_brand_tables.py  (+3 more)
(+362 files in other folders)
